paper: final version

--- a/paper/sample-papers/jmlr-sample.bib
+++ b/paper/sample-papers/jmlr-sample.bib
@@ -1,19 +1,194 @@
-@article{guyon-elisseeff-03,
-  title   = "An Introduction to Variable and Feature Selection",
-  author  = "I. Guyon and A. Elisseeff",
-  journal = "JMLR",
-  volume  = "3",
-  month   = MAR,
-  pages   = "1157-1182",
-  year    = 2003
+@inproceedings{johansson2017model,
+  title={Model-agnostic nonconformity functions for conformal classification},
+  author={Johansson, Ulf and Linusson, Henrik and L{\"o}fstr{\"o}m, Tuve and Bostr{\"o}m, Henrik},
+  booktitle={2017 International Joint Conference on Neural Networks (IJCNN)},
+  pages={2072--2079},
+  year={2017},
+  organization={IEEE}
 }
 
-@techreport{guyon2007causalreport,
-  author      = {I. Guyon and C. Aliferis and A. Elisseeff},
-  title       = {Causal Feature Selection},
-  institution = {Clopinet},
-  year        = 2007,
-  type        = {Technical Report },
-  source      = {\url{http://clopinet.com/isabelle/Papers/causalFS.pdf}}
+@misc{Dua:2019 ,
+author = "Dua, Dheeru and Graff, Casey",
+year = "2017",
+title = "{UCI} Machine Learning Repository",
+url = "http://archive.ics.uci.edu/ml",
+institution = "University of California, Irvine, School of Information and Computer Sciences" } 
+
+@article{shafer2008tutorial,
+  title={A Tutorial on Conformal Prediction.},
+  author={Shafer, Glenn and Vovk, Vladimir},
+  journal={Journal of Machine Learning Research},
+  volume={9},
+  number={3},
+  year={2008}
 }
+
+@book{vovk2005algorithmic,
+  title={Algorithmic learning in a random world},
+  author={Vovk, Vladimir and Gammerman, Alex and Shafer, Glenn},
+  year={2005},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{yang2021finite,
+  title={Finite-sample Efficient Conformal Prediction},
+  author={Yang, Yachong and Kuchibhotla, Arun Kumar},
+  journal={arXiv preprint arXiv:2104.13871},
+  year={2021}
+}
+
+@phdthesis{linusson2021nonconformity,
+  title={Nonconformity Measures and Ensemble Strategies: An Analysis of Conformal Predictor Efficiency and Validity},
+  author={Linusson, Henrik},
+  year={2021},
+  school={Department of Computer and Systems Sciences, Stockholm University}
+}
+
+@inproceedings{linusson2014efficiency,
+  title={Efficiency comparison of unstable transductive and inductive conformal classifiers},
+  author={Linusson, Henrik and Johansson, Ulf and Bostr{\"o}m, Henrik and L{\"o}fstr{\"o}m, Tuve},
+  booktitle={IFIP International Conference on Artificial Intelligence Applications and Innovations},
+  pages={261--270},
+  year={2014},
+  organization={Springer}
+}
+
+@inproceedings{linusson2017calibration,
+  title={On the calibration of aggregated conformal predictors},
+  author={Linusson, Henrik and Norinder, Ulf and Bostr{\"o}m, Henrik and Johansson, Ulf and L{\"o}fstr{\"o}m, Tuve},
+  booktitle={Conformal and probabilistic prediction and applications},
+  pages={154--173},
+  year={2017},
+  organization={PMLR}
+}
+
+@inproceedings{toccaceli2017combination,
+  title={Combination of conformal predictors for classification},
+  author={Toccaceli, Paolo and Gammerman, Alexander},
+  booktitle={Conformal and Probabilistic Prediction and Applications},
+  pages={39--61},
+  year={2017},
+  organization={PMLR}
+}
+
+@article{gauraha2018synergy,
+  title={Synergy conformal prediction},
+  author={Gauraha, Niharika and Spjuth, Ola},
+  year={2018}
+}
+
+@article{cherubin2019majority,
+  title={Majority vote ensembles of conformal predictors},
+  author={Cherubin, Giovanni},
+  journal={Machine Learning},
+  volume={108},
+  number={3},
+  pages={475--488},
+  year={2019},
+  publisher={Springer}
+}
+
+@inproceedings{toccaceli2019conformal,
+  title={Conformal predictor combination using Neyman--Pearson Lemma},
+  author={Toccaceli, Paolo},
+  booktitle={Conformal and Probabilistic Prediction and Applications},
+  pages={66--88},
+  year={2019},
+  organization={PMLR}
+}
+
+@article{toccaceli2019combination,
+  title={Combination of inductive mondrian conformal predictors},
+  author={Toccaceli, Paolo and Gammerman, Alexander},
+  journal={Machine Learning},
+  volume={108},
+  number={3},
+  pages={489--510},
+  year={2019},
+  publisher={Springer}
+}
+
+@article{linusson2020efficient,
+  title={Efficient conformal predictor ensembles},
+  author={Linusson, Henrik and Johansson, Ulf and Bostr{\"o}m, Henrik},
+  journal={Neurocomputing},
+  volume={397},
+  pages={266--278},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{papadopoulos2011reliable,
+  title={Reliable prediction intervals with regression neural networks},
+  author={Papadopoulos, Harris and Haralambous, Haris},
+  journal={Neural Networks},
+  volume={24},
+  number={8},
+  pages={842--851},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@misc{vovk2014criteria,
+  title={Criteria of efficiency for conformal prediction, On-line Compression Modelling project (New Series)},
+  author={Vovk, Vladimir and Fedorova, Valentina and Gammerman, Alex and Nouretdinov, Ilia},
+  year={2014},
+  publisher={Working Paper 11 (April 2014) http://alrw. net}
+}
+
+@inproceedings{jaiswal2015model,
+  title={Model Selection Using Efficiency of Conformal Predictors},
+  author={Jaiswal, Ritvik and Balasubramanian, Vineeth N},
+  booktitle={International Symposium on Statistical Learning and Data Sciences},
+  pages={291--300},
+  year={2015},
+  organization={Springer}
+}
+
+@inproceedings{papadopoulos2002inductive,
+  title={Inductive confidence machines for regression},
+  author={Papadopoulos, Harris and Proedrou, Kostas and Vovk, Volodya and Gammerman, Alex},
+  booktitle={European Conference on Machine Learning},
+  pages={345--356},
+  year={2002},
+  organization={Springer}
+}
+
+@inproceedings{vovk2013transductive,
+  title={Transductive conformal predictors},
+  author={Vovk, Vladimir},
+  booktitle={IFIP International Conference on Artificial Intelligence Applications and Innovations},
+  pages={348--360},
+  year={2013},
+  organization={Springer}
+}
+
+@incollection{papadopoulos2008inductive,
+  title={Inductive conformal prediction: Theory and application to neural networks},
+  author={Papadopoulos, Harris},
+  booktitle={Tools in artificial intelligence},
+  year={2008},
+  publisher={Citeseer}
+}
+
+@inproceedings{balasubramanian2009support,
+  title={Support vector machine based conformal predictors for risk of complications following a coronary drug eluting stent procedure},
+  author={Balasubramanian, Vineeth Nallure and Gouripeddi, R and Panchanathan, Sethuraman and Vermillion, J and Bhaskaran, A and Siegel, RM},
+  booktitle={2009 36th Annual Computers in Cardiology Conference (CinC)},
+  pages={5--8},
+  year={2009},
+  organization={IEEE}
+}
+
+@inproceedings{proedrou2002transductive,
+  title={Transductive confidence machines for pattern recognition},
+  author={Proedrou, Kostas and Nouretdinov, Ilia and Vovk, Volodya and Gammerman, Alex},
+  booktitle={European Conference on Machine Learning},
+  pages={381--390},
+  year={2002},
+  organization={Springer}
+}
+
+
+
 
