--- a/paper/sample-papers/plots/balance-avgC-0.tex
+++ b/paper/sample-papers/plots/balance-avgC-0.tex
@@ -13,7 +13,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -26,7 +26,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 1.4658064516129
-0.03 1.26612903225806
+%0.03 1.26612903225806
 0.05 1.18016129032258
 0.1 1.02967741935484
 0.15 0.909354838709677
@@ -35,7 +35,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.425
-0.03 1.27241935483871
+%0.03 1.27241935483871
 0.05 1.18564516129032
 0.1 1.02677419354839
 0.15 0.900806451612903
@@ -44,7 +44,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 1.425
-0.03 1.26629032258065
+%0.03 1.26629032258065
 0.05 1.17516129032258
 0.1 1.0241935483871
 0.15 0.900645161290323
@@ -54,7 +54,7 @@ table {%
 \addplot [very thick, color1, dashed, forget plot]
 table {%
 0.01 2.95241935483871
-0.03 2.45322580645161
+%0.03 2.45322580645161
 0.05 2.02596774193548
 0.1 1.60935483870968
 0.15 1.33629032258065
@@ -63,7 +63,7 @@ table {%
 \addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 2.93774193548387
+%0.03 2.93774193548387
 0.05 2.60483870967742
 0.1 1.70338709677419
 0.15 1.35548387096774
@@ -72,7 +72,7 @@ table {%
 \addplot [color1]
 table {%
 0.01 3
-0.03 2.90096774193548
+%0.03 2.90096774193548
 0.05 2.4941935483871
 0.1 1.68048387096774
 0.15 1.35370967741935
