--- a/paper/sample-papers/plots/glass-oneC-0.tex
+++ b/paper/sample-papers/plots/glass-oneC-0.tex
@@ -13,7 +13,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -28,7 +28,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0
-0.03 0.0828571428571429
+%0.03 0.0828571428571429
 0.05 0.112857142857143
 0.1 0.163333333333333
 0.15 0.230952380952381
@@ -37,7 +37,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0.0119047619047619
+%0.03 0.0119047619047619
 0.05 0.0228571428571429
 0.1 0.0638095238095238
 0.15 0.155714285714286
@@ -46,7 +46,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0
-0.03 0.0119047619047619
+%0.03 0.0119047619047619
 0.05 0.0895238095238095
 0.1 0.135238095238095
 0.15 0.192857142857143
@@ -56,7 +56,7 @@ table {%
 \addplot [very thick, color1, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.00714285714285714
 0.1 0.0747619047619048
 0.15 0.195238095238095
@@ -65,7 +65,7 @@ table {%
 \addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0
 0.1 0.00761904761904762
 0.15 0.0785714285714286
@@ -74,7 +74,7 @@ table {%
 \addplot [color1]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0
 0.1 0.0147619047619048
 0.15 0.100952380952381
