--- a/paper/sample-papers/plots/glass-oneC-4.tex
+++ b/paper/sample-papers/plots/glass-oneC-4.tex
@@ -12,7 +12,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -27,7 +27,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0
-0.03 0.0480952380952381
+%0.03 0.0480952380952381
 0.05 0.107142857142857
 0.1 0.217142857142857
 0.15 0.291428571428571
@@ -36,7 +36,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0.0166666666666667
+%0.03 0.0166666666666667
 0.05 0.0761904761904762
 0.1 0.121904761904762
 0.15 0.213333333333333
@@ -45,7 +45,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0
-0.03 0.0166666666666667
+%0.03 0.0166666666666667
 0.05 0.0909523809523809
 0.1 0.143809523809524
 0.15 0.217619047619048
@@ -55,7 +55,7 @@ table {%
 \addplot [very thick, black, dashed, forget plot]
 table {%
 0.01 0
-0.03 0.0761904761904762
+%0.03 0.0761904761904762
 0.05 0.135714285714286
 0.1 0.23047619047619
 0.15 0.296666666666667
@@ -64,7 +64,7 @@ table {%
 \addplot [very thick, black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0.0661904761904762
+%0.03 0.0661904761904762
 0.05 0.131428571428571
 0.1 0.196190476190476
 0.15 0.294285714285714
@@ -73,7 +73,7 @@ table {%
 \addplot [black]
 table {%
 0.01 0
-0.03 0.0661904761904762
+%0.03 0.0661904761904762
 0.05 0.170476190476191
 0.1 0.250952380952381
 0.15 0.341428571428571
