--- a/paper/sample-papers/plots/glass-oneC-6.tex
+++ b/paper/sample-papers/plots/glass-oneC-6.tex
@@ -17,8 +17,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
-xticklabels = {.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
+xticklabels = {.01,.05,.1,.15,.2},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
@@ -32,7 +32,7 @@ width=7cm,
 \addplot [very thick, blue, dashed, forget plot]
 table {%
 0.01 0
-0.03 0.291904761904762
+%0.03 0.291904761904762
 0.05 0.396666666666667
 0.1 0.564285714285714
 0.15 0.676666666666667
@@ -41,7 +41,7 @@ table {%
 \addplot [very thick, blue, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0.104285714285714
+%0.03 0.104285714285714
 0.05 0.264285714285714
 0.1 0.438095238095238
 0.15 0.57
@@ -50,7 +50,7 @@ table {%
 \addplot [blue]
 table {%
 0.01 0
-0.03 0.104285714285714
+%0.03 0.104285714285714
 0.05 0.380952380952381
 0.1 0.537619047619048
 0.15 0.622380952380952
@@ -60,7 +60,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 0
-0.03 0.00380952380952381
+%0.03 0.00380952380952381
 0.05 0.0257142857142857
 0.1 0.0533333333333333
 0.15 0.0761904761904762
@@ -69,7 +69,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0.00238095238095238
+%0.03 0.00238095238095238
 0.05 0.00238095238095238
 0.1 0.010952380952381
 0.15 0.0438095238095238
@@ -78,7 +78,7 @@ table {%
 \addplot [white!50.1960784313725!black]
 table {%
 0.01 0
-0.03 0.00238095238095238
+%0.03 0.00238095238095238
 0.05 0.00428571428571429
 0.1 0.030952380952381
 0.15 0.0547619047619048
