--- a/paper/sample-papers/plots/iris-avgC-0.tex
+++ b/paper/sample-papers/plots/iris-avgC-0.tex
@@ -13,7 +13,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -26,7 +26,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.026
 0.1 0.941333333333333
 0.15 0.868666666666667
@@ -35,7 +35,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.01733333333333
 0.1 0.944
 0.15 0.871333333333333
@@ -44,7 +44,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.01733333333333
 0.1 0.944
 0.15 0.871333333333333
@@ -54,7 +54,7 @@ table {%
 \addplot [very thick, color1, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 2.41933333333333
 0.1 1.53
 0.15 0.98
@@ -63,7 +63,7 @@ table {%
 \addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 2.4
 0.1 1.57333333333333
 0.15 0.980666666666667
@@ -72,7 +72,7 @@ table {%
 \addplot [color1]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 2.4
 0.1 1.556
 0.15 0.980666666666667
