--- a/paper/sample-papers/plots/iris-avgC-2.tex
+++ b/paper/sample-papers/plots/iris-avgC-2.tex
@@ -12,7 +12,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -25,7 +25,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.242
 0.1 0.987333333333333
 0.15 0.921333333333333
@@ -34,7 +34,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.242
 0.1 0.987333333333333
 0.15 0.921333333333333
@@ -43,7 +43,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.242
 0.1 0.987333333333333
 0.15 0.921333333333333
@@ -53,7 +53,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.30933333333333
 0.1 1.03733333333333
 0.15 0.943333333333333
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.246
 0.1 1.03
 0.15 0.943333333333333
@@ -71,7 +71,7 @@ table {%
 \addplot [green!50.1960784313725!black]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.246
 0.1 1.03
 0.15 0.943333333333333
