--- a/paper/sample-papers/plots/iris-avgC-4.tex
+++ b/paper/sample-papers/plots/iris-avgC-4.tex
@@ -12,7 +12,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -25,7 +25,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.11866666666667
 0.1 1.00933333333333
 0.15 0.886
@@ -34,7 +34,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.06
 0.1 0.985333333333333
 0.15 0.882
@@ -43,7 +43,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.06
 0.1 0.985333333333333
 0.15 0.882
@@ -53,7 +53,7 @@ table {%
 \addplot [very thick, black, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1
 0.1 0.946
 0.15 0.871333333333334
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 0.994
 0.1 0.947333333333333
 0.15 0.876666666666667
@@ -71,7 +71,7 @@ table {%
 \addplot [black]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 0.994
 0.1 0.947333333333333
 0.15 0.876666666666667
