--- a/paper/sample-papers/plots/iris-avgC-6.tex
+++ b/paper/sample-papers/plots/iris-avgC-6.tex
@@ -10,8 +10,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
-xticklabels = {.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
+xticklabels = {.01,.05,.1,.15,.2},
 xlabel = {$\epsilon$},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -24,7 +24,7 @@ width=7cm,
 \addplot [very thick, blue, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.522
 0.1 1.01
 0.15 0.904
@@ -33,7 +33,7 @@ table {%
 \addplot [very thick, blue, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.55666666666667
 0.1 1.014
 0.15 0.893333333333334
@@ -42,7 +42,7 @@ table {%
 \addplot [blue]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.55666666666667
 0.1 0.992
 0.15 0.893333333333334
@@ -52,7 +52,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.024
 0.1 0.950666666666667
 0.15 0.881333333333333
@@ -61,7 +61,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.00866666666667
 0.1 0.949333333333334
 0.15 0.881333333333333
@@ -70,7 +70,7 @@ table {%
 \addplot [white!50.1960784313725!black]
 table {%
 0.01 3
-0.03 3
+%0.03 3
 0.05 1.00866666666667
 0.1 0.949333333333334
 0.15 0.881333333333333
