--- a/paper/sample-papers/plots/iris-oneC-4.tex
+++ b/paper/sample-papers/plots/iris-oneC-4.tex
@@ -14,7 +14,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -29,7 +29,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.901333333333334
 0.1 0.924
 0.15 0.866
@@ -38,7 +38,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.901333333333334
 0.1 0.924
 0.15 0.866
@@ -47,7 +47,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.901333333333334
 0.1 0.924
 0.15 0.866
@@ -57,7 +57,7 @@ table {%
 \addplot [very thick, black, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.948
 0.1 0.944666666666667
 0.15 0.871333333333334
@@ -66,7 +66,7 @@ table {%
 \addplot [very thick, black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.951333333333333
 0.1 0.946
 0.15 0.876666666666667
@@ -75,7 +75,7 @@ table {%
 \addplot [black]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.951333333333333
 0.1 0.946
 0.15 0.876666666666667
