--- a/paper/sample-papers/plots/wave-avgC-0.tex
+++ b/paper/sample-papers/plots/wave-avgC-0.tex
@@ -13,7 +13,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -26,7 +26,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 1.88446
-0.03 1.50746
+%0.03 1.50746
 0.05 1.3211
 0.1 1.076
 0.15 0.96842
@@ -35,7 +35,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.49878
-0.03 1.32072
+%0.03 1.32072
 0.05 1.23498
 0.1 1.07568
 0.15 0.96802
@@ -44,7 +44,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 1.49878
-0.03 1.32072
+%0.03 1.32072
 0.05 1.23498
 0.1 1.07568
 0.15 0.96802
@@ -54,7 +54,7 @@ table {%
 \addplot [very thick, color1, dashed, forget plot]
 table {%
 0.01 2.97482
-0.03 2.21012
+%0.03 2.21012
 0.05 1.88836
 0.1 1.43148
 0.15 1.26256
@@ -63,7 +63,7 @@ table {%
 \addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 2.96788
-0.03 1.87866
+%0.03 1.87866
 0.05 1.62108
 0.1 1.40818
 0.15 1.25842
@@ -72,7 +72,7 @@ table {%
 \addplot [color1]
 table {%
 0.01 2.96788
-0.03 1.8781
+%0.03 1.8781
 0.05 1.62044
 0.1 1.4077
 0.15 1.25808
