--- a/paper/sample-papers/plots/wave-avgC-2.tex
+++ b/paper/sample-papers/plots/wave-avgC-2.tex
@@ -12,7 +12,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -25,7 +25,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 2.89642
-0.03 1.52264
+%0.03 1.52264
 0.05 1.52264
 0.1 1.2634
 0.15 1.26054
@@ -34,7 +34,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 2.89642
-0.03 1.52264
+%0.03 1.52264
 0.05 1.52264
 0.1 1.2634
 0.15 1.26054
@@ -43,7 +43,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 2.89642
-0.03 1.52264
+%0.03 1.52264
 0.05 1.52264
 0.1 1.2634
 0.15 1.26054
@@ -53,7 +53,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 1.6212
-0.03 1.43344
+%0.03 1.43344
 0.05 1.33016
 0.1 1.15206
 0.15 1.03072
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.53784
-0.03 1.41266
+%0.03 1.41266
 0.05 1.3368
 0.1 1.1927
 0.15 1.08212
@@ -71,7 +71,7 @@ table {%
 \addplot [green!50.1960784313725!black]
 table {%
 0.01 1.52918
-0.03 1.39778
+%0.03 1.39778
 0.05 1.3204
 0.1 1.17378
 0.15 1.06314
