--- a/paper/sample-papers/plots/wave-avgC-6.tex
+++ b/paper/sample-papers/plots/wave-avgC-6.tex
@@ -10,8 +10,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
-xticklabels = {.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
+xticklabels = {.01,.05,.1,.15,.2},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
@@ -23,7 +23,7 @@ width=7cm,
 \addplot [very thick, blue, dashed, forget plot]
 table {%
 0.01 1.8204
-0.03 1.4978
+%0.03 1.4978
 0.05 1.37382
 0.1 1.18546
 0.15 1.05574
@@ -32,7 +32,7 @@ table {%
 \addplot [very thick, blue, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.63406
-0.03 1.45032
+%0.03 1.45032
 0.05 1.34946
 0.1 1.18092
 0.15 1.0641
@@ -41,7 +41,7 @@ table {%
 \addplot [blue]
 table {%
 0.01 1.5923
-0.03 1.40158
+%0.03 1.40158
 0.05 1.3005
 0.1 1.1362
 0.15 1.03554
@@ -51,7 +51,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 1.80502
-0.03 1.4604
+%0.03 1.4604
 0.05 1.2561
 0.1 1.10236
 0.15 0.992
@@ -60,7 +60,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.44276
-0.03 1.31736
+%0.03 1.31736
 0.05 1.24286
 0.1 1.10238
 0.15 0.99202
@@ -69,7 +69,7 @@ table {%
 \addplot [white!50.1960784313725!black]
 table {%
 0.01 1.44276
-0.03 1.31736
+%0.03 1.31736
 0.05 1.24286
 0.1 1.10238
 0.15 0.99202
