--- a/paper/sample-papers/plots/wave-oneC-2.tex
+++ b/paper/sample-papers/plots/wave-oneC-2.tex
@@ -19,7 +19,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -34,7 +34,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0.03366
-0.03 0.47872
+%0.03 0.47872
 0.05 0.47872
 0.1 0.7366
 0.15 0.73946
@@ -43,7 +43,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.03366
-0.03 0.47872
+%0.03 0.47872
 0.05 0.47872
 0.1 0.7366
 0.15 0.73946
@@ -52,7 +52,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0.03366
-0.03 0.47872
+%0.03 0.47872
 0.05 0.47872
 0.1 0.7366
 0.15 0.73946
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 0.39588
-0.03 0.57054
+%0.03 0.57054
 0.05 0.6713
 0.1 0.8482
 0.15 0.9659
@@ -71,7 +71,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.461
-0.03 0.58026
+%0.03 0.58026
 0.05 0.647
 0.1 0.75398
 0.15 0.80964
@@ -80,7 +80,7 @@ table {%
 \addplot [green!50.1960784313725!black]
 table {%
 0.01 0.46966
-0.03 0.59514
+%0.03 0.59514
 0.05 0.6634
 0.1 0.7729
 0.15 0.82862
