--- a/paper/sample-papers/sections/1-balance-data/plots.tex
+++ b/paper/sample-papers/sections/1-balance-data/plots.tex
@@ -1,7 +1,8 @@
 \begin{figure}[htbp]
 \floatconts
   {fig:balance}
-  {\caption{Results for \textit{balance} dataset.}}
+  {\caption{Results for \textit{balance}: \textit{M} - dashed line,
+  \textit{IP} - dash and dot line, \textit{IP\_M} - thin line}}
   {%
     \subfigure[Distribution between classes]{
     \label{fig:balance:dist-class}%
