--- a/paper/sample-papers/sections/4-iris-data/plots.tex
+++ b/paper/sample-papers/sections/4-iris-data/plots.tex
@@ -1,7 +1,8 @@
 \begin{figure}[htbp]
 \floatconts
   {fig:iris}
-  {\caption{Results for \textit{iris} dataset.}}
+  {\caption{Results for \textit{iris}: \textit{M} - dashed line,
+  \textit{IP} - dash and dot line, \textit{IP\_M} - thin solid line}}
   {%
     \subfigure[Distribution between classes]{
     \label{fig:iris:dist-class}%
