--- a/paper/sample-papers/plots/balance-oneC-2.tex
+++ b/paper/sample-papers/plots/balance-oneC-2.tex
@@ -19,7 +19,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -34,7 +34,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0.569193548387097
-0.03 0.57258064516129
+%0.03 0.57258064516129
 0.05 0.59758064516129
 0.1 0.755322580645161
 0.15 0.89241935483871
@@ -43,7 +43,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0.01
+%0.03 0.01
 0.05 0.134838709677419
 0.1 0.67
 0.15 0.754354838709677
@@ -52,7 +52,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0
-0.03 0.569193548387097
+%0.03 0.569193548387097
 0.05 0.571129032258064
 0.1 0.672741935483871
 0.15 0.754354838709677
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 0.74
-0.03 0.81241935483871
+%0.03 0.81241935483871
 0.05 0.866612903225806
 0.1 0.958709677419355
 0.15 0.913870967741935
@@ -71,7 +71,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.0891935483870968
-0.03 0.208387096774194
+%0.03 0.208387096774194
 0.05 0.309838709677419
 0.1 0.59
 0.15 0.742903225806452
@@ -80,7 +80,7 @@ table {%
 \addplot [green!50.1960784313725!black]
 table {%
 0.01 0.0891935483870968
-0.03 0.773064516129032
+%0.03 0.773064516129032
 0.05 0.828225806451613
 0.1 0.888225806451613
 0.15 0.877258064516129
