--- a/paper/sample-papers/plots/glass-avgC-4.tex
+++ b/paper/sample-papers/plots/glass-avgC-4.tex
@@ -12,20 +12,22 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
 ymin=-0.045, ymax=6.336,
 ytick style={color=black},
+ytick={0,1,2,3,4,5,6},
+yticklabels = {0,1,2,3,4,5,6},
 height=4.3cm,
 width=7cm,
 ]
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 5.76
-0.03 5.48238095238095
+%0.03 5.48238095238095
 0.05 5.14190476190476
 0.1 4.45666666666667
 0.15 3.97238095238095
@@ -34,7 +36,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 5.76
-0.03 5.29
+%0.03 5.29
 0.05 4.42904761904762
 0.1 3.50428571428571
 0.15 2.27380952380952
@@ -43,7 +45,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 5.76
-0.03 5.29
+%0.03 5.29
 0.05 4.37190476190476
 0.1 3.42333333333333
 0.15 2.26761904761905
@@ -53,7 +55,7 @@ table {%
 \addplot [very thick, black, dashed, forget plot]
 table {%
 0.01 5.76
-0.03 5.05428571428571
+%0.03 5.05428571428571
 0.05 4.48095238095238
 0.1 3.60619047619048
 0.15 2.83095238095238
@@ -62,7 +64,7 @@ table {%
 \addplot [very thick, black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 5.76
-0.03 4.22761904761905
+%0.03 4.22761904761905
 0.05 3.27190476190476
 0.1 2.73714285714286
 0.15 2.31857142857143
@@ -71,7 +73,7 @@ table {%
 \addplot [black]
 table {%
 0.01 5.76
-0.03 4.22761904761905
+%0.03 4.22761904761905
 0.05 3.1547619047619
 0.1 2.58
 0.15 2.19095238095238
