--- a/paper/sample-papers/plots/iris-oneC-0.tex
+++ b/paper/sample-papers/plots/iris-oneC-0.tex
@@ -20,7 +20,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+%xtick={.01,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -35,7 +36,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%%0.03 0
 0.05 0.952
 0.1 0.928
 0.15 0.867333333333333
@@ -44,7 +45,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%%0.03 0
 0.05 0.949333333333333
 0.1 0.932
 0.15 0.87
@@ -53,7 +54,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.949333333333333
 0.1 0.932
 0.15 0.87
@@ -63,7 +64,7 @@ table {%
 \addplot [very thick, color1, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.281333333333333
 0.1 0.709333333333333
 0.15 0.969333333333333
@@ -72,7 +73,7 @@ table {%
 \addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.290666666666667
 0.1 0.69
 0.15 0.97
@@ -81,7 +82,7 @@ table {%
 \addplot [color1]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.290666666666667
 0.1 0.698666666666667
 0.15 0.97
