--- a/paper/sample-papers/plots/iris-oneC-2.tex
+++ b/paper/sample-papers/plots/iris-oneC-2.tex
@@ -19,7 +19,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -34,7 +34,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.836666666666667
 0.1 0.947333333333333
 0.15 0.917333333333334
@@ -43,7 +43,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.836666666666667
 0.1 0.947333333333333
 0.15 0.917333333333334
@@ -52,7 +52,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.836666666666667
 0.1 0.947333333333333
 0.15 0.917333333333334
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.745333333333333
 0.1 0.91
 0.15 0.938
@@ -71,7 +71,7 @@ table {%
 \addplot [very thick, green!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.745333333333333
 0.1 0.91
 0.15 0.938
@@ -80,7 +80,7 @@ table {%
 \addplot [green!50.1960784313725!black]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.745333333333333
 0.1 0.91
 0.15 0.938
