--- a/paper/sample-papers/plots/iris-oneC-6.tex
+++ b/paper/sample-papers/plots/iris-oneC-6.tex
@@ -17,8 +17,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
-xticklabels = {.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
+xticklabels = {.01,.05,.1,.15,.2},
 xlabel = {$\epsilon$},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -33,7 +33,7 @@ width=7cm,
 \addplot [very thick, blue, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.7
 0.1 0.926666666666667
 0.15 0.902666666666667
@@ -42,7 +42,7 @@ table {%
 \addplot [very thick, blue, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.675333333333333
 0.1 0.904666666666667
 0.15 0.890666666666667
@@ -51,7 +51,7 @@ table {%
 \addplot [blue]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.675333333333333
 0.1 0.918
 0.15 0.890666666666667
@@ -61,7 +61,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.958
 0.1 0.946666666666667
 0.15 0.881333333333333
@@ -70,7 +70,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.958
 0.1 0.946666666666667
 0.15 0.881333333333333
@@ -79,7 +79,7 @@ table {%
 \addplot [white!50.1960784313725!black]
 table {%
 0.01 0
-0.03 0
+%0.03 0
 0.05 0.958
 0.1 0.946666666666667
 0.15 0.881333333333333
