--- a/paper/sample-papers/plots/wave-avgC-4.tex
+++ b/paper/sample-papers/plots/wave-avgC-4.tex
@@ -12,7 +12,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -25,7 +25,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 2.27434
-0.03 1.90062
+%0.03 1.90062
 0.05 1.68006
 0.1 1.3521
 0.15 1.09862
@@ -34,7 +34,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.68862
-0.03 1.48658
+%0.03 1.48658
 0.05 1.37094
 0.1 1.20418
 0.15 1.07568
@@ -43,7 +43,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 1.68862
-0.03 1.48658
+%0.03 1.48658
 0.05 1.37094
 0.1 1.20418
 0.15 1.07568
@@ -53,7 +53,7 @@ table {%
 \addplot [very thick, black, dashed, forget plot]
 table {%
 0.01 1.797
-0.03 1.43806
+%0.03 1.43806
 0.05 1.2462
 0.1 1.07988
 0.15 0.97146
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 1.4522
-0.03 1.30912
+%0.03 1.30912
 0.05 1.22706
 0.1 1.07944
 0.15 0.96908
@@ -71,7 +71,7 @@ table {%
 \addplot [black]
 table {%
 0.01 1.44976
-0.03 1.30534
+%0.03 1.30534
 0.05 1.2241
 0.1 1.07686
 0.15 0.96908
