--- a/paper/sample-papers/plots/wave-oneC-0.tex
+++ b/paper/sample-papers/plots/wave-oneC-0.tex
@@ -20,7 +20,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -35,7 +35,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0.50678
-0.03 0.67954
+%0.03 0.67954
 0.05 0.76386
 0.1 0.924
 0.15 0.96782
@@ -44,7 +44,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.50924
-0.03 0.67958
+%0.03 0.67958
 0.05 0.76504
 0.1 0.92432
 0.15 0.96738
@@ -53,7 +53,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0.50924
-0.03 0.67958
+%0.03 0.67958
 0.05 0.76504
 0.1 0.92432
 0.15 0.96738
@@ -63,7 +63,7 @@ table {%
 \addplot [very thick, color1, dashed, forget plot]
 table {%
 0.01 0.01062
-0.03 0.32294
+%0.03 0.32294
 0.05 0.43012
 0.1 0.61022
 0.15 0.74898
@@ -72,7 +72,7 @@ table {%
 \addplot [very thick, color1, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.00804
-0.03 0.28248
+%0.03 0.28248
 0.05 0.40234
 0.1 0.59454
 0.15 0.74174
@@ -81,7 +81,7 @@ table {%
 \addplot [color1]
 table {%
 0.01 0.00804
-0.03 0.28304
+%0.03 0.28304
 0.05 0.40298
 0.1 0.59502
 0.15 0.74208
