--- a/paper/sample-papers/plots/wave-oneC-4.tex
+++ b/paper/sample-papers/plots/wave-oneC-4.tex
@@ -19,7 +19,7 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
 %xticklabels = {.01,.03,.05,.1,.15,.2},
 xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
@@ -34,7 +34,7 @@ width=7cm,
 \addplot [very thick, color0, dashed, forget plot]
 table {%
 0.01 0.3346
-0.03 0.52
+%0.03 0.52
 0.05 0.63162
 0.1 0.79598
 0.15 0.92422
@@ -43,7 +43,7 @@ table {%
 \addplot [very thick, color0, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.3355
-0.03 0.52062
+%0.03 0.52062
 0.05 0.63204
 0.1 0.79602
 0.15 0.92432
@@ -52,7 +52,7 @@ table {%
 \addplot [color0]
 table {%
 0.01 0.3355
-0.03 0.52062
+%0.03 0.52062
 0.05 0.63204
 0.1 0.79602
 0.15 0.92432
@@ -62,7 +62,7 @@ table {%
 \addplot [very thick, black, dashed, forget plot]
 table {%
 0.01 0.54536
-0.03 0.69316
+%0.03 0.69316
 0.05 0.77142
 0.1 0.92012
 0.15 0.97126
@@ -71,7 +71,7 @@ table {%
 \addplot [very thick, black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.54786
-0.03 0.69088
+%0.03 0.69088
 0.05 0.77294
 0.1 0.92056
 0.15 0.96888
@@ -80,7 +80,7 @@ table {%
 \addplot [black]
 table {%
 0.01 0.5503
-0.03 0.69466
+%0.03 0.69466
 0.05 0.7759
 0.1 0.92314
 0.15 0.96888
