--- a/paper/sample-papers/plots/wave-oneC-6.tex
+++ b/paper/sample-papers/plots/wave-oneC-6.tex
@@ -17,8 +17,8 @@ x grid style={white!69.0196078431373!black},
 xmajorgrids,
 xmin=0.000499999999999999, xmax=0.2095,
 xtick style={color=black},
-xtick={.01,.03,.05,.1,.15,.2},
-xticklabels = {.01,.03,.05,.1,.15,.2},
+xtick={.01,.05,.1,.15,.2},
+xticklabels = {.01,.05,.1,.15,.2},
 %xticklabels = {,,,,,},
 y grid style={white!69.0196078431373!black},
 ymajorgrids,
@@ -31,7 +31,7 @@ width=7cm,
 \addplot [very thick, blue, dashed, forget plot]
 table {%
 0.01 0.3676
-0.03 0.54116
+%0.03 0.54116
 0.05 0.64306
 0.1 0.8174
 0.15 0.9442
@@ -40,7 +40,7 @@ table {%
 \addplot [very thick, blue, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.3771
-0.03 0.55066
+%0.03 0.55066
 0.05 0.65006
 0.1 0.8076
 0.15 0.89822
@@ -49,7 +49,7 @@ table {%
 \addplot [blue]
 table {%
 0.01 0.41842
-0.03 0.59936
+%0.03 0.59936
 0.05 0.69902
 0.1 0.85232
 0.15 0.92678
@@ -59,7 +59,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dashed, forget plot]
 table {%
 0.01 0.55724
-0.03 0.68264
+%0.03 0.68264
 0.05 0.75714
 0.1 0.89764
 0.15 0.98452
@@ -68,7 +68,7 @@ table {%
 \addplot [very thick, white!50.1960784313725!black, dash pattern=on 1pt off 3pt on 3pt off 3pt, forget plot]
 table {%
 0.01 0.55724
-0.03 0.68264
+%0.03 0.68264
 0.05 0.75714
 0.1 0.89762
 0.15 0.98454
@@ -77,7 +77,7 @@ table {%
 \addplot [white!50.1960784313725!black]
 table {%
 0.01 0.55724
-0.03 0.68264
+%0.03 0.68264
 0.05 0.75714
 0.1 0.89762
 0.15 0.98454
