--- a/paper/sample-papers/sections/1-balance-data/table_threshold.tex
+++ b/paper/sample-papers/sections/1-balance-data/table_threshold.tex
@@ -5,7 +5,7 @@
  % go in the third argument.
 \floatconts
   {tab:balance}%
-  {\caption{balance dataset}}%
+  {\caption{Significance of results for the \textit{balance} dataset}}%
   {
 \begin{tabular}{cl|lll|lll|lll|lll|lll}
              && \multicolumn{3}{c|}{$\epsilon=0.01$} & \multicolumn{3}{c|}{$\epsilon=0.05$} & \multicolumn{3}{c|}{$\epsilon=0.1$} & \multicolumn{3}{c|}{$\epsilon=0.15$} & \multicolumn{3}{c}{$\epsilon=0.2$} \\
