--- a/paper/sample-papers/sections/3-glass-data/plots.tex
+++ b/paper/sample-papers/sections/3-glass-data/plots.tex
@@ -1,7 +1,8 @@
 \begin{figure}[htbp]
 \floatconts
   {fig:glass}
-  {\caption{Results for \textit{glass} dataset.}}
+  {\caption{Results for \textit{glass}: \textit{M} - dashed line,
+  \textit{IP} - dash and dot line, \textit{IP\_M} - thin solid line}}
   {%
     \subfigure[Distribution between classes]{
     \label{fig:glass:dist-class}%
