--- a/paper/sample-papers/sections/6-wave-data/plots.tex
+++ b/paper/sample-papers/sections/6-wave-data/plots.tex
@@ -1,7 +1,8 @@
 \begin{figure}[htbp]
 \floatconts
   {fig:wave}
-  {\caption{Results for \textit{wave} dataset.}}
+  {\caption{Results for \textit{wave}: \textit{M} - dashed line,
+  \textit{IP} - dash and dot line, \textit{IP\_M} - thin solid line}}
   {%
     \subfigure[Distribution between classes]{
     \label{fig:wave:dist-class}%
