--- a/paper/sample-papers/sections/9-yeast-data/plots.tex
+++ b/paper/sample-papers/sections/9-yeast-data/plots.tex
@@ -3,7 +3,8 @@
 \begin{figure}[htbp]
 \floatconts
   {fig:yeast}
-  {\caption{Results for \textit{yeast} dataset.}}
+  {\caption{Results for \textit{yeast}: \textit{M} - dashed line,
+  \textit{IP} - dash and dot line, \textit{IP\_M} - thin solid line.}}
   {%
     \subfigure[Distribution between classes]{
     \label{fig:yeast:dist-class}%
